kdepim (4:2.2-alpha1-1) experimental; urgency=low
 
  * New upstream version
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Tue, 10 Apr 2001 17:46:00 -0700

kdepim (4:2.1.1-2) unstable; urgency=low
 
  * Update menu bits to include new kde menu removal tag
  * More upstream fixes
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 08 Apr 2001 17:46:00 -0700

kdepim (4:2.1.1-1.0.1) unstable; urgency=low
 
  * Rebuild with older libc
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 26 Mar 2001 17:00:00 -0700

kdepim (4:2.1.1-1) unstable; urgency=low
 
  * New upstream version
  * Upstream fixes (Closes: #77622, #77803)
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 19 Mar 2001 22:31:00 -0700

kdepim (4:2.1.0-1) unstable; urgency=low
 
  * New upstream CVS pull
  * Update shlibs
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Wed, 07 Mar 2001 22:31:00 -0700

kdepim (4:2.1-final-1) unstable; urgency=low
 
  * New upstream version
  * Upping standards version
  * Fix build problem with new libc 2.2.1 (Closes: #86435)
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 19 Feb 2001 02:31:00 -0700

kdepim (4:2.1-beta2-1) unstable; urgency=low
 
  * New upstream beta
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 22 Jan 2001 06:00:00 -0700

kdepim (4:2.1-20010118-1) unstable; urgency=low
 
  * New upstream cvs version
  * Fixing overwrite problem (Closes: #82965)
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 21 Jan 2001 00:46:00 -0700

kdepim (4:2.1-20010115-1) unstable; urgency=low
 
  * New upstream cvs version
  * no more libical package
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 15 Jan 2001 01:00:00 -0700

kdepim (4:2.1-20010106-1) unstable; urgency=low
 
  * New upstream cvs version
  * Updating build-depends
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 06 Jan 2001 23:30:00 -0700

kdepim (4:2.1-20010101-1) unstable; urgency=low
 
  * New upstream cvs version
  * korganizer is now 2.1beta1 as well
  * Breaking out libical into it's own lib/lib-dev packages