@@ -1,0 +1,2 @@
+kandy/README
+kandy/AUTHORS
