@@ -1,5 +1,3 @@
-usr/include/rmm/*
-usr/lib/librmm.so
-usr/lib/libvcard.so
-usr/lib/libimap.so
-usr/lib/libkorganizer.so
+usr/include/*
+usr/lib/lib*.so
+usr/lib/lib*.a
