@@ -7,3 +7,21 @@ usr/lib/librmm.la
 usr/lib/libvcard.so.0.0.0
 usr/lib/libvcard.so.0
 usr/lib/libvcard.la
+usr/lib/libkgantt.so.0.0.2
+usr/lib/libkgantt.so.0
+usr/lib/libkgantt.la
+usr/lib/libical.so.*
+usr/lib/libical.la
+usr/lib/libicalss.so.*
+usr/lib/libicalss.la
+usr/lib/libicalvcal.so.*
+usr/lib/libicalvcal.la
+usr/share/icons/hicolor/22x22/actions/ganttSelect.png
+usr/share/icons/hicolor/22x22/actions/ganttSelecttask.png
+usr/share/icons/hicolor/22x22/actions/ganttUnselecttask.png
+usr/share/icons/hicolor/32x32/actions/ganttSelect.png
+usr/share/icons/hicolor/32x32/actions/ganttSelecttask.png
+usr/share/icons/hicolor/32x32/actions/ganttUnselecttask.png
+usr/share/icons/locolor/16x16/actions/ganttSelect.png
+usr/share/icons/locolor/16x16/actions/ganttSelecttask.png
+usr/share/icons/locolor/16x16/actions/ganttUnselecttask.png
