@@ -1,3 +1,0 @@
-libimap 0 kdepim-libs (>= 4:2.2-0)
-librmm 1 kdepim-libs (>= 4:2.2-0)
-libvcard 0 kdepim-libs (>= 4:2.2-0)
