@@ -1,1 +1,0 @@
-libkorganizer 1 korganizer (>= 4:2.2-0)
