@@ -1,4 +1,4 @@
-usr/share/lintian/overrides/kpilot
+usr/share/apps/kpilot/*
 usr/share/applnk/Utilities/kpilot.desktop
 usr/share/applnk/Utilities/kpilotdaemon.desktop
 usr/share/servicetypes/kpilotconduit.desktop
@@ -7,20 +7,15 @@ usr/share/services/vcal-conduit.desktop
 usr/share/services/todo-conduit.desktop
 usr/share/services/popmail-conduit.desktop
 usr/share/services/knotes-conduit.desktop
+usr/share/services/expense-conduit.desktop
 usr/bin/kpilot
 usr/bin/kpilotDaemon
 usr/bin/pilotListener
+usr/bin/null_conduit
 usr/bin/vcalconduit
 usr/bin/todoconduit
 usr/bin/popmail_conduit
 usr/bin/conduitKNotes
-usr/bin/null_conduit
-usr/share/man/man1/null_conduit*
-usr/share/man/man1/kpilot*
-usr/share/man/man1/pilot*
-usr/share/man/man1/vcalconduit*
-usr/share/man/man1/todoconduit*
-usr/share/man/man1/popmail_conduit*
-usr/share/man/man1/conduitKNotes*
+usr/bin/conduitExpense
 usr/share/doc/kde/HTML/en/kpilot/*
-usr/share/doc/kpilot/*
+usr/share/lintian/overrides/kpilot
